@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.55 2009/11/18 15:35:22 mn Exp $
+# $Id: CHANGES,v 1.993.2.56 2009/11/23 12:04:04 mn Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.6 (2009/??/??)
+ - (2009/11/23) Fixed bug#4128 - Signature line breaks are stripped in
+    E-Mail-Ticket.
  - (2009/11/18) Fixed bug#4319 - 'no quotable message' error for old messages
     after upgrade.
  - (2009/11/18) Added FastCGI handle for web installer.
